[tool.pdm.dev-dependencies]
dev = ["-e file:///${PROJECT_ROOT}/.#egg=src"]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Stuart McGibbon", email = "mcgibbonstuart@gmail.com"},
]
dependencies = [
    "click",
    "Sphinx",
    "coverage",
    "awscli",
    "flake8",
    "python-dotenv>=0.5.1",
    "ipykernel>=6.22.0",
    "numpy>=1.24.2",
    "pandas>=2.0.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
